--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/dist/css/main.css" />
+    <link rel="stylesheet" href="dist/css/main.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -44,6 +44,6 @@
         <h3>Talai kina chaiyo help!?</h3> Khurukkana P ya p type garda play hunxa,<br> R or r lekhda restart hunxa,<br>ani k khana help thicya thyasne!
       </div>
     </main>
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
